...
        android:layout_below="@+id/dialog_title"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/dialog_hour_edittext"
            android:layout_width="@dimen/time_dialog_edit_text_width"
            android:layout_height="wrap_content"
            android:text="@string/dialog_hour_string"
            android:inputType="number"
            android:gravity="end"
            android:selectAllOnFocus="true"
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/H_string"/>
        <EditText
            android:id="@+id/dialog_minute_edittext"
            android:layout_width="@dimen/time_dialog_edit_text_width"
            android:layout_height="wrap_content"
            android:text="@string/dialog_hour_string"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
...
