...
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@color/colorPrimary" />
    </LinearLayout>
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"
...
        fab:menu_openDirection="up"
        fab:fab_shadowColor="#66000000"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true">

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_label="Deadline"
        fab:fab_colorNormal="@color/colorPrimaryDark"
        fab:fab_colorPressed="@color/colorAccent"
        android:src="@drawable/ic_date_range_white_24dp"
...
