...
    </string-array>

    <!-- Log strings-->

    <!-- Button strings-->
    <string name="dialog_done">Done</string>
    <string name="dialog_ok" translatable="false">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_hour_string">00</string>
    <string name="activity_string">Activity</string>
    <string name="goal_string">Goal</string>

    <!-- Settings strings-->
...
    <string name="goal_icon_content_description">Icon for Goal</string>
    <string name="deadline_icon_content_description">Deadline Icon</string>
    <string name="priority_icon_content_description">Priority Icon</string>

    <!-- Strings related to login -->
    <string name="action_signout">Sign Out</string>
    <string name="toast_no_name_activity_added">Please enter an activity name</string>
    <string name="toast_enter_goal">Please enter a goal</string>

    <!-- Strings related to the Select tasks to add time towards Screen !-->
    <string name="add_item_string">Add New Task</string>
    <string name="select_tasks_to_add_time_to_title">Add time to…</string>
    <string name="select_tasks_no_tasks_selected">No task(s) selected</string>
...
